--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner{
-    height: 85vh;
+    
 }
 
 .banner-title {
@@ -15,7 +15,7 @@
 
 .banner-text {
     font-size: 18px;
-    margin: 40px 0 60px;
+    margin: 40px 0;
     color: #858792;
 }
 
@@ -31,6 +31,7 @@
     font-size: 15px;
     cursor: pointer;
     transition: 0.4s;
+    margin-bottom: 30px;
 }
 
 .resume-button:hover {
@@ -41,8 +42,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
-.grid-left {
-   padding-left: 30px;
+.banner-grid-left {
+   padding-left: 100px;
+}
+
+.banner-grid-right img{
+    display: flex;
+    align-items: center;
 }
