--- a/src/components/Home/Navbar/Navbar.css
+++ b/src/components/Home/Navbar/Navbar.css
@@ -31,6 +31,7 @@
     font-size: 1.1rem;
     display: flex;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .hamburger-menu {
