--- a/src/components/Home/Navbar/Sidebar/Sidebar.css
+++ b/src/components/Home/Navbar/Sidebar/Sidebar.css
@@ -54,3 +54,28 @@
         display: none;
     }
 }
+
+.menu-icons {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+
+.menu-icon {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    border: 1px solid rgb(59, 61, 73);
+    transition: all 0.4s; 
+    cursor: pointer; 
+}
+
+.s-icon {
+    color: #fff;
+}
+
+.menu-icon:hover {
+    background-color: #2E303D;
+}
