--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -13,9 +13,10 @@
 }
 
 .banner-text {
-    font-size: 18px;
+    font-size: 16px;
     margin: 30px 0;
     color: #f4f4f4;
+    font-family: 'Poppins', 'sans-serif';
 }
 
 .resume-button {
