--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,10 +1,18 @@
 footer {
     background-color: #252734;
-    padding: 1.5rem 0;
+    padding-bottom: 20px;
     border-top: 1px solid  rgb(59, 61, 73);
 }
-
-footer > p {
+footer > div {
+    margin: 50px 0;
+}
+footer > div > p {
     text-align: center;
     color: #fff;
+}
+
+@media (max-width: 960px) {
+    footer > div {
+        margin: 50px 0 100px;
+    }
 }
