skill section work done

--- a/src/components/Home/MySkills/MySkills.css
+++ b/src/components/Home/MySkills/MySkills.css
@@ -65,6 +65,6 @@
     top: calc(100% - 15px);
     left: 0;
     height: 12px;
-    background-color: #00CF5D;
+    background-color: #fff;
     border-radius: 20px;
 }
