--- a/src/components/Home/ContactMe/ContactMe.css
+++ b/src/components/Home/ContactMe/ContactMe.css
@@ -1,9 +1,7 @@
-
 form {
-    width: 60%;
-    display: block;
-    margin: 0 auto;
-    box-sizing: border-box;
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px
 }
 
 .form-control {
@@ -36,3 +34,28 @@ form {
         width: 98%;
     }
 }
+
+.contact-grid {
+    padding:20px;
+}
+
+.contact-info {
+    margin: 10px 0;
+    padding: 20px;
+    width: 100%;
+    background-color: #2A2C39;
+    border-radius: 3px;
+}
+
+.contact-info > h3 {
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Poppins', 'sans-serif';
+}
+
+.contact-info > p {
+    color: #fff;
+    font-family: 'Poppins', 'sans-serif';
+    font-size: 15px;
+}
+
