--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -21,14 +21,16 @@
 
 .resume-button {
     height: 60px;
-    line-height: 50px;
+    display: inline-block;
+    text-decoration: none;
+    line-height: 60px;
     padding: 0 30px 0 30px;
     border-radius: 43.5px;
     background-color: #252734;
     border: 1px solid  rgb(59, 61, 73);
     border-image: initial;
     color: #fff;
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
     transition: 0.4s;
     margin-bottom: 30px;
