--- a/src/components/Home/ContactMe/ContactMe.css
+++ b/src/components/Home/ContactMe/ContactMe.css
@@ -21,6 +21,23 @@ form {
     width: 99%;
 }
 
+.send-message-btn {
+    height: 60px;
+    display: inline-block;
+    text-decoration: none;
+    line-height: 60px;
+    padding: 0 30px 0 30px;
+    border-radius: 43.5px;
+    background-color: #252734;
+    border: 1px solid  rgb(59, 61, 73);
+    border-image: initial;
+    color: #fff;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.4s;
+    margin-bottom: 30px;
+}
+
 .form-control:hover, .form-control:focus {
     border: 1px solid #fff;
 }
