--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
     color: #fff;
     font-family: 'Poppins', 'sans-serif';
     font-size: 28px;
+    margin-bottom: 30px;
+    position: relative;
 }
 
 .mt-3 {
