--- a/src/components/Home/Blog/Blog.css
+++ b/src/components/Home/Blog/Blog.css
@@ -1,3 +1,7 @@
+.blog-section {
+    padding-top: 40px;
+    margin-bottom: 80px;
+}
 .blog-container {
     margin: 20px 10px;
     background-color: #2A2C39;
