--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,18 +1,10 @@
 footer {
     background-color: #252734;
-    padding-bottom: 20px;
+    padding: 40px 0;
     border-top: 1px solid  rgb(59, 61, 73);
 }
-footer > div {
-    margin: 50px 0;
-}
+
 footer > div > p {
     text-align: center;
     color: #fff;
-}
-
-@media (max-width: 960px) {
-    footer > div {
-        margin: 50px 0 100px;
-    }
 }
