--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -55,7 +55,7 @@
 .banner-grid-right img{
     width: 100%;
     height: 600px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 @media (max-width: 960px) {
@@ -72,4 +72,11 @@
     .banner-name {
         font-size: 70px;
     }
+
+    
+.banner-grid-right img{
+    width: 100%;
+    height: 400px;
+    object-fit: contain;
+}
 }
