--- a/src/components/Home/Blog/Blog.css
+++ b/src/components/Home/Blog/Blog.css
@@ -1,6 +1,6 @@
 .blog-section {
-    padding-top: 40px;
-    margin-bottom: 80px;
+   margin-top: 100px;
+   margin-bottom: 30px;
 }
 .blog-container {
     margin: 20px 10px;
