--- a/src/components/Home/MySkills/MySkills.css
+++ b/src/components/Home/MySkills/MySkills.css
@@ -1,5 +1,6 @@
 .skill-section {
-    margin: 100px 0;
+    margin-top: 100px;
+    margin-bottom: 30px;
 }
 .button-container {
     display: flex;
