--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -27,7 +27,7 @@
     padding: 0 30px 0 30px;
     border-radius: 43.5px;
     background-color: #252734;
-    border: 1px solid  rgb(59, 61, 73);
+    border: 1px solid  #fff;
     border-image: initial;
     color: #fff;
     font-size: 15px;
