--- a/src/components/Home/MySkills/MySkills.css
+++ b/src/components/Home/MySkills/MySkills.css
@@ -1,6 +1,7 @@
 .skill-section {
     margin-top: 100px;
     margin-bottom: 30px;
+    padding-top: 100px;
 }
 .button-container {
     display: flex;
