--- a/src/components/Home/MySkills/MySkills.css
+++ b/src/components/Home/MySkills/MySkills.css
@@ -70,3 +70,14 @@
     background-color: #fff;
     border-radius: 20px;
 }
+
+@media (max-width: 960px) {
+    .skills-button {
+        height: 45px;
+        line-height: 45px;
+        padding: 0 30px 0 30px;
+        border-radius: 43.5px;
+        color: #fff;
+        font-size: 13px;
+    }
+}
